<resources>
    <string name="app_name">MusicStructureApp</string>
    <string name="tv_label_now_playing">Now Playing</string>
    <string name="tv_label_songs">Songs</string>
    <string name="tv_label_playlist">Playlist</string>
    <string name="tv_label_albums">Albums</string>
    <string name="img_desc_image">image</string>
    <string name="tv_label_timer">0:00</string>
    <string name="tv_label_album_name">Album name</string>
    <string name="tv_label_song_title">Song Title</string>
    <string name="btn_label_create_new">create new</string>
    <string name="tv_label_no_albums">No Albums available</string>
    <string name="tv_label_default_song">default-song.mp3</string>
</resources>
