<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:padding="16dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="5dp"
    app:cardCornerRadius="4dp"
    tools:context=".NowPlayingActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView5"

            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="@dimen/marginBottom_8dp"
            app:srcCompat="@drawable/ic_music_note_black_24dp"
            android:contentDescription="@string/img_desc_image" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_below="@id/imageView5"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView7"
            android:layout_below="@id/seekBar"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/marginStart_8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_label_timer" />

        <TextView
            android:id="@+id/tv_art_name"
            android:layout_below="@id/seekBar"
            style="@style/menu_text_style"
            android:text="@string/tv_label_album_name" />

        <TextView
            android:id="@+id/tv_song_title"
            android:layout_below="@id/tv_art_name"
            style="@style/menu_text_style"
            android:text="@string/tv_label_song_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@id/tv_song_title"
            android:layout_marginTop="@dimen/marginTop_8dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/card_selector"
                android:layout_height="50dp"
                android:src="@drawable/ic_skip_previous_black_24dp"
                android:contentDescription="@string/img_desc_image" />

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/card_selector"
                android:layout_height="50dp"
                android:src="@drawable/ic_pause_black_24dp"
                android:contentDescription="@string/img_desc_image" />
            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/card_selector"
                android:layout_height="50dp"
                android:src="@drawable/ic_skip_next_black_24dp"
                android:contentDescription="@string/img_desc_image" />

        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>