<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_album"
            style="@style/menu_card_style"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toStartOf="@id/card_playlist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/album"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_selector"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    style="@style/menu_image_view_style"
                    android:contentDescription="@string/img_desc_image"
                    app:srcCompat="@drawable/ic_headset_black_24dp" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/menu_text_style"
                    android:text="@string/tv_label_albums" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_playlist"
            style="@style/menu_card_style"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_album"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/playlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_selector"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    style="@style/menu_image_view_style"
                    android:contentDescription="@string/img_desc_image"
                    app:srcCompat="@drawable/ic_playlist_play_black_24dp" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/menu_text_style"
                    android:text="@string/tv_label_playlist" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_now_playing"
            style="@style/menu_card_style"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/card_songs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_album">

            <LinearLayout
                android:id="@+id/playing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_selector"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    style="@style/menu_image_view_style"
                    android:contentDescription="@string/img_desc_image"
                    app:srcCompat="@drawable/ic_music_note_black_24dp" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/menu_text_style"
                    android:text="@string/tv_label_now_playing" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_songs"
            style="@style/menu_card_style"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_now_playing"
            app:layout_constraintTop_toBottomOf="@id/card_playlist">

            <LinearLayout
                android:id="@+id/songs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_selector"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    style="@style/menu_image_view_style"
                    android:contentDescription="@string/img_desc_image"
                    app:srcCompat="@drawable/ic_library_music_black_24dp" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/menu_text_style"
                    android:text="@string/tv_label_songs" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>